my_code/tp-manifest/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busy
  name: busy
spec:
  containers:
  - args:
    - tail
    - -f
    - /dev/null
    image: busybox:1.28
    name: busy
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
