my_code/tp-manifest/hello_http_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-http
  name: hello-http
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 32149
  selector:
    app: hello-http
  type: NodePort
status:
  loadBalancer: {}
