my_code/tp-manifest/hello_http_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-http
spec:
  ingressClassName: nginx
  rules:
  - host: hello-http.stage.local
    http:
      paths:
      - backend:
          service:
            name: hello-http
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
